--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -10,6 +10,28 @@
 .header__logo-link {
   display: flex;
   align-items: center;
+  transition: 0.3s;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:focus {
+    outline: dashed 2px rgba(255, 255, 255, 0.2);
+    outline-offset: 0;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.header__logo-svg {
+  fill: $text-light;
+}
+
+.header__toggle {
+  display: none;
 }
 
 @media (max-width: $tablet-width) {
@@ -17,20 +39,86 @@
     min-height: 83px;
   }
 
-  .header__logo-image {
+  .header__logo-svg {
+    fill: $text-light;
     width: 38px;
     height: 20px;
   }
 }
 
-
 @media (max-width: $mobile-width) {
   .header {
+    position: relative;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
     min-height: 61px;
+    max-width: none;
   }
 
-  .header__logo-image {
+  .header__logo-link {
+    padding-left: 15px;
+    padding-top: 20px;
+    position: absolute;
+    z-index: 5;
+  }
+
+  .header__logo-svg {
     width: 42px;
     height: 22px;
+  }
+
+  .header__toggle {
+    position: absolute;
+    top: 25px;
+    right: 15px;
+
+    display: block;
+    width: 24px;
+    height: 14px;
+    background-image: url("../img/svg/burger.svg");
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+  }
+
+  .header--opened .header__toggle {
+    position: absolute;
+    top: 25px;
+    right: 15px;
+    width: 13px;
+    height: 13px;
+    padding: 0;
+    z-index: 5;
+
+    background-image: url("../img/svg/cross.svg");
+  }
+
+  .header--nojs .header__toggle {
+    display: none;
+  }
+
+  .header--nojs .header__nav-list {
+    position: relative;
+    display: flex;
+  }
+
+  .header--nojs .header__logo-svg {
+    fill: $text-dark;
+  }
+
+  .header--opened .header__nav-list {
+    position: absolute;
+    display: flex;
+    top: 0;
+  }
+
+  .header--opened .header__logo-svg {
+    fill: $text-dark;
+  }
+
+  .header--closed .header__nav-list {
+    display: none;
   }
 }
