--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -3,6 +3,7 @@ $font-main: "Montserrat", "Arial", sans-serif;
 $text-light: #f9fbfd;
 $text-gray: #d8d8d9;
 $text-dark: #011c40;
+$color-accent: #76bff1;
 
 $tablet-width: 1023px;
 $mobile-width: 767px;
