--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,5 +1,4 @@
 .footer {
-
   background-color: $text-dark;
   color: $text-light;
 }
@@ -8,7 +7,8 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  min-height: 138px;
+  padding-top: 49px;
+  padding-bottom: 49px;
 }
 
 .footer__logo-link:hover .footer__logo-svg {
@@ -16,6 +16,19 @@
 }
 
 .footer__logo-link {
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+  }
+
   &:focus {
     outline: dashed 2px rgba(255, 255, 255, 0.2);
     outline-offset: 0;
@@ -77,6 +90,19 @@
 }
 
 .footer__social-link {
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+  }
+
   &:focus {
     outline: dashed 2px rgba(255, 255, 255, 0.2);
     outline-offset: 3px;
@@ -88,10 +114,6 @@
 }
 
 @media (max-width: $tablet-width) {
-  .footer__inner {
-    min-height: 120px;
-  }
-
   .footer__logo-svg {
     width: 38px;
     height: 20px;
