--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -5,6 +5,7 @@ $text-gray: #d8d8d9;
 $text-dark: #011c40;
 $color-accent: #76bff1;
 
+$desktop-width: 1024px;
 $tablet-width: 1023px;
 $mobile-width: 767px;
 
