--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,5 @@
 @import "blocks/travel.scss";
 @import "blocks/benefits.scss";
 @import "blocks/cruises.scss";
+@import "blocks/booking.scss";
+@import "blocks/form.scss";
