--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,28 +2,34 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 121px;
-  padding-bottom: 121px;
+  padding-top: 114px;
+  padding-bottom: 114px;
 }
 
 .contacts__map-wrapper {
+  position: relative;
   width: 560px;
-  height: 306px;
-
-  background-image: url("../img/map-desktop@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-
-  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/map-desktop@2x.jpg");
-  }
+  height: 319px;
+  overflow: hidden;
 }
 
 .contacts__map-wrapper iframe {
+  position: relative;
+  z-index: 1;
   height: 100%;
   width: 100%;
   border: 0;
+}
+
+.contacts__map-wrapper img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: none;
+  height: 100%;
+  width: auto;
+  z-index: 0;
 }
 
 .contacts__info {
@@ -51,6 +57,23 @@
   padding: 14px 0 7px 28px;
 }
 
+
+.contacts__list-item a {
+  &:hover {
+    color: $color-accent;
+    text-decoration: underline;
+  }
+
+  &:focus {
+    outline: dashed 2px rgba(118, 191, 241, 0.3);
+    outline-offset: 2px;
+  }
+
+  &:active {
+    color: darken($color-accent, 15%);
+  }
+}
+
 .contacts__list-item p {
   margin: 0;
 }
@@ -70,12 +93,6 @@
   .contacts__map-wrapper {
     width: 48%;
     height: 335px;
-
-    background-image: url("../img/map-tablet@1x.jpg");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/map-tablet@2x.jpg");
-    }
   }
 
   .contacts__info {
@@ -103,12 +120,6 @@
   .contacts__map-wrapper {
     width: 100%;
     height: 316px;
-
-    background-image: url("../img/map-mobile@1x.jpg");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/map-mobile@2x.jpg");
-    }
   }
 
   .contacts__info {
