--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,12 +1,10 @@
 .container {
-  max-width: $desktop-container-width; //1220px
+  max-width: $desktop-container-width;
   padding: 0 30px;
   margin: 0 auto;
 
   @media (max-width: $tablet-width) {
-    // max-width: $tablet-container-width; //678px //? убрать
-    // padding: 0;
-    padding: 0 45px; //? добавить
+    padding: 0 45px;
   }
 
   @media (max-width: $mobile-width) {
