--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -41,6 +41,10 @@
   fill: $text-light;
 }
 
+.footer__nav {
+  width: 56%;
+}
+
 .footer__nav-list,
 .footer__social {
   display: flex;
@@ -57,13 +61,17 @@
 }
 
 .footer__nav-item {
-  padding: 0 15px 0 18px;
+  padding: 10px 15px 10px 18px;
 }
 
 .footer__social {
   align-items: center;
-  width: 117px;
+  width: 125px;
   margin-left: auto;
+}
+
+.footer__social-item {
+  padding: 8px 0 9px 8px;
 }
 
 .footer__nav-link {
@@ -115,9 +123,17 @@
 
 
 @media (max-width: $tablet-width) {
+  .footer__inner {
+    padding-top: 44px;
+  }
+
   .footer__logo-svg {
     width: 38px;
     height: 20px;
+  }
+
+  .footer__nav {
+    width: 72%;
   }
 
   .footer__nav-list {
@@ -127,11 +143,11 @@
   }
 
   .footer__nav-item {
-    padding: 0 24px 4px 0;
+    padding: 6px 23px 10px 0;
   }
 
   .footer__social {
-    width: 87px;
+    width: 95px;
   }
 
   .footer__social-svg {
@@ -177,5 +193,9 @@
 
   .footer__nav-item {
     padding: 5px 0 12px 0;
+  }
+
+  .footer__social-item {
+    padding: 0 8px 9px 0;
   }
 }
