--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -50,7 +50,7 @@
 }
 
 .form__field--text input {
-  padding: 16px;
+  padding: 0 16px;
   width: 303px;
   height: 43px;
 
@@ -58,6 +58,10 @@
   color: $text-dark;
   border: none;
   background-color: $text-light;
+
+  &:hover {
+    box-shadow: inset 0 0 0 2px $color-accent;
+  }
 
   &:focus {
     outline: dashed 2px rgba(255, 255, 255, 0.4);
