--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,8 +1,14 @@
 .header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  width: 100%;
   padding-top: 36px;
   padding-bottom: 36px;
   color: $text-light;
@@ -15,9 +21,7 @@
   transition: 0.3s;
 
   &::before {
-    content: "";
-    display: block;
-    position: absolute;
+    @include pseudo;
     top: 0;
     right: 0;
     bottom: 0;
@@ -31,7 +35,7 @@
 
   &:focus {
     outline: dashed 2px rgba(255, 255, 255, 0.2);
-    outline-offset: 0;
+    outline-offset: 2px;
   }
 
   &:active {
@@ -66,7 +70,6 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 0;
-    min-height: 61px;
     max-width: none;
   }
 
