--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,7 +1,3 @@
-.page-main {
-  margin-top: -110px;
-}
-
 .page-main__promo {
   min-height: 650px;
 
@@ -20,24 +16,22 @@
 .page-main__promo h1 {
   padding: 270px 0 0 97px;
   margin: 0;
+  max-width: 850px;
 
   @include text(54px, 66px);
   font-weight: 700;
 }
 
 .page-main__promo p {
-  padding: 12px 0 0 97px;
+  padding: 12px 0 50px 97px;
   margin: 0;
+  max-width: 600px;
 
   @include text(20px, 24px);
   font-weight: 400;
 }
 
 @media (max-width: $tablet-width) {
-  .page-main {
-    margin-top: -80px;
-  }
-
   .page-main__promo {
     min-height: 638px;
     background-image: url("../img/page-main-bg-tablet@1x.jpg");
@@ -61,10 +55,6 @@
 }
 
 @media (max-width: $mobile-width) {
-  .page-main {
-    margin-top: -61px;
-  }
-
   .page-main__promo {
     min-height: 500px;
   }
