добавляет тег address, удаляет лишние svg

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -74,8 +74,8 @@
   }
 }
 
-.contacts__list-item p {
-  margin: 0;
+.contacts__list-item address {
+  font-style: normal;
 }
 
 .contacts__list-svg {
