--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -49,20 +49,33 @@
   padding: 67px 30px 11px;
   margin-bottom: 30px;
   background-color: $text-light;
-}
 
-.benefits__item svg {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-}
+  &::before {
+    @include pseudo;
+    left: 30px;
+    background-repeat: no-repeat;
+  }
 
-.benefits__item--all-inclusive svg {
-  top: 35px;
-}
+  &--liner::before {
+    top: 30px;
+    width: 27px;
+    height: 32px;
+    background-image: url("../img/svg/liner.svg");
+  }
 
-.benefits__item--zodiac svg {
-  top: 38px;
+  &--all-inclusive::before {
+    top: 35px;
+    width: 38px;
+    height: 21px;
+    background-image: url("../img/svg/all-inclusive.svg");
+  }
+
+  &--zodiac::before {
+    top: 38px;
+    width: 42px;
+    height: 15px;
+    background-image: url("../img/svg/zodiac.svg");
+  }
 }
 
 .benefits__item--all-inclusive p {
@@ -96,27 +109,27 @@
 
   .benefits__item {
     padding: 55px 11px 6px 20px;
-  }
 
-  .benefits__item--liner svg {
-    top: 24px;
-    left: 21px;
-    width: 21px;
-    height: 26px;
-  }
+    &--liner::before {
+      top: 24px;
+      left: 21px;
+      width: 21px;
+      height: 26px;
+    }
 
-  .benefits__item--all-inclusive svg {
-    top: 28px;
-    left: 22px;
-    width: 33px;
-    height: 19px;
-  }
+    &--all-inclusive::before {
+      top: 28px;
+      left: 22px;
+      width: 33px;
+      height: 19px;
+    }
 
-  .benefits__item--zodiac svg {
-    top: 31px;
-    left: 23px;
-    width: 38px;
-    height: 13px;
+    &--zodiac::before {
+      top: 31px;
+      left: 23px;
+      width: 38px;
+      height: 13px;
+    }
   }
 
   .benefits__item--zodiac p {
