правки (оптимизация шрифтов, фокус на карточках)

--- a/source/sass/blocks/cruises.scss
+++ b/source/sass/blocks/cruises.scss
@@ -36,11 +36,6 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  &:focus {
-    outline: dashed 2px rgba(118, 191, 241, 0.4);
-    outline-offset: 4px;
-  }
-
   &--astoria {
     background-image: url("../img/astoria@1x.jpg");
     background-position: -166px 0;
@@ -181,11 +176,9 @@
   }
 }
 
-.cruises__item:hover .cruises__info {
-  display: flex;
-}
-
-.cruises__item:active .cruises__info {
+.cruises__item:hover .cruises__info,
+.cruises__item:active .cruises__info,
+.cruises__item--focused .cruises__info {
   display: flex;
 }
 
