--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Montserrat";
-  src: url("../fonts/montserrat-regular.woff2") format("woff2"),
-    url("../fonts/montserrat-regular.woff") format("woff");
+  src: url("../fonts/montserrat-400.woff2") format("woff2"),
+    url("../fonts/montserrat-400.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../fonts/montserrat-medium.woff2") format("woff2"),
-    url("../fonts/montserrat-medium.woff") format("woff");
+  src: url("../fonts/montserrat-500.woff2") format("woff2"),
+    url("../fonts/montserrat-500.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -19,8 +19,8 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../fonts/montserrat-semibold.woff2") format("woff2"),
-    url("../fonts/montserrat-semibold.woff") format("woff");
+  src: url("../fonts/montserrat-600.woff2") format("woff2"),
+    url("../fonts/montserrat-600.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -28,8 +28,8 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../fonts/montserrat-bold.woff2") format("woff2"),
-    url("../fonts/montserrat-bold.woff") format("woff");
+  src: url("../fonts/montserrat-700.woff2") format("woff2"),
+    url("../fonts/montserrat-700.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
